style.css
* {
  margin: 0;
  padding: 0;
}
body {
  background: #f5f5f5;
  color: #333;
  font-family: "Raleway", sans-serif;
}

html {
  font-size: 62.5%;
}

.navbar {
  border-bottom: #008 0.2rem solid;
  opacity: 0.6;
  font-family: "Open Sans", sans-serif;
  font-size: 1.6rem;
  width: 100%;
}

.navbar-brand {
  font-size: 2rem;
}

.opening {
  position: relative;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url(images/background1.jpg);
  border-bottom-left-radius: 50% 20%;
  border-bottom-right-radius: 50% 20%;
  overflow-y: auto;
  overflow: hidden;
}

.opening h1 {
  padding-top: 40vh;
  color: white;
  font-size: 5rem;
  line-height: 7.5rem;
  text-align: center;
  margin: 0;
}

.opening h2 {
  padding: 1vh;
  color: white;
  font-size: 3rem;
  line-height: 4.5rem;
  text-align: center;
  margin: 0;
}

.btn-outline-light {
  font-size: 2rem;
  line-height: 3rem;
}

h1 {
  font-family: "Open Sans", sans-serif;
  font-size: 5rem;
  line-height: 7.5rem;
}

p {
  font-size: 2rem !important;
  line-height: 2.4rem;
}

.aboutMe {
  padding: 5rem 20rem;
}
.skills {
  background: linear-gradient(#1cb5e0, #000046);
  color: white;
  padding-bottom: 6rem;
}

.svgImage {
  margin-left: 3rem;
  margin-bottom: 2rem;
}

.projects {
  position: relative;
}

.bg-video {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
  opacity: 0.5;
  overflow: hidden;
}

.bg-video-content {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

[class^="icon-"],
[class*=" icon-"] {
  display: inline-block;
  width: 100%;
}

i {
  font-size: 3rem;
  text-align: center;
}

.project-tools {
  list-style: none;
  width: 80%;
  margin: 0 auto;
}

li.tools {
  text-align: center;
  font-size: 1.5rem;
  padding: 1rem;
}

li.tools:not(:last-child) {
  border-bottom: 1px solid #eee;
}

.card-text {
  font-size: 2rem;
}

.card-img {
  height: 200px;
  width: 100%;
}

.github-btn {
  display: inline-block;
  margin: 0 auto;
  left: 3em;
}
.card-flip {
  perspective: 1000px;
}

.card-flip:hover .flip,
.card-flip.hover .flip {
  transform: rotateY(180deg);
}

.card-flip,
.front,
.back {
  width: 300px;
  height: 500px;
}

.flip {
  transition: 0.4s;
  transform-style: preserve-3d;
  position: relative;
}

.front,
.back {
  backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

.front {
  z-index: 2;
  transform: rotateY(0deg);
}

.back {
  transform: rotateY(180deg);
}

.contact-list {
  width: 100%;
}

.contact-icon {
  padding: 2rem;
}

.contact {
  background: linear-gradient(90deg, #000046 20px, transparent 1%) center,
    linear-gradient(#000046 20px, transparent 1%) center, #1cb5e0;
  background-size: 22px 22px;
  color: #eee;
}

/* Wobble Vertical */
@-webkit-keyframes hvr-wobble-vertical {
  16.65% {
    -webkit-transform: translateY(0.8rem);
    transform: translateY(0.8rem);
  }
  33.3% {
    -webkit-transform: translateY(-0.6rem);
    transform: translateY(-0.6rem);
  }
  49.95% {
    -webkit-transform: translateY(0.4rem);
    transform: translateY(0.4rem);
  }
  66.6% {
    -webkit-transform: translateY(-0.2rem);
    transform: translateY(-0.2rem);
  }
  83.25% {
    -webkit-transform: translateY(0.1rem);
    transform: translateY(0.1rem);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}
@keyframes hvr-wobble-vertical {
  16.65% {
    -webkit-transform: translateY(0.8rem);
    transform: translateY(0.8rem);
  }
  33.3% {
    -webkit-transform: translateY(-0.6rem);
    transform: translateY(-0.6rem);
  }
  49.95% {
    -webkit-transform: translateY(0.4rem);
    transform: translateY(0.4rem);
  }
  66.6% {
    -webkit-transform: translateY(-0.2rem);
    transform: translateY(-0.2rem);
  }
  83.25% {
    -webkit-transform: translateY(0.1rem);
    transform: translateY(0.1rem);
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}
.hvr-wobble-vertical {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-wobble-vertical:hover,
.hvr-wobble-vertical:focus,
.hvr-wobble-vertical:active {
  -webkit-animation-name: hvr-wobble-vertical;
  animation-name: hvr-wobble-vertical;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

